// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker Cascader Picker 1`] = `
<Picker
  cancelText="取消"
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  disabled={false}
  displayAddon=""
  displayMember="label"
  okText="确定"
  onCancel={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onMaskClick={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input za-picker-placeholder"
    >
      <input
        type="hidden"
        value={Array []}
      />
      请选择
    </div>
    <div
      className="za-picker-container"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        className="za-popup-inner"
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-inner za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <Cascader
                    data={
                      Array [
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "11",
                            },
                            Object {
                              "label": "选项二",
                              "value": "12",
                            },
                          ],
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "21",
                            },
                            Object {
                              "label": "选项二",
                              "value": "22",
                            },
                          ],
                          "label": "选项一",
                          "value": "2",
                        },
                      ]
                    }
                    disabled={false}
                    displayMember="label"
                    onChange={[Function]}
                    prefixCls="za-picker"
                    value={Array []}
                    valueMember="value"
                  >
                    <ColumnGroup
                      displayMember="label"
                      onValueChange={[Function]}
                      prefixCls="za-picker"
                      selectedValue={
                        Array [
                          "1",
                          "11",
                        ]
                      }
                      valueMember="value"
                    >
                      <div
                        className="za-picker-column-group"
                      >
                        <div
                          className="za-picker-column-group-item"
                        >
                          <Column
                            displayMember="label"
                            onValueChange={[Function]}
                            prefixCls="za-picker"
                            pure={true}
                            selectedValue="1"
                            valueMember="value"
                          >
                            <div
                              className="za-picker-cascader"
                            >
                              <div
                                className="za-picker-cascader-indicator"
                              />
                              <div
                                className="za-picker-cascader-content"
                              >
                                <div
                                  className="za-picker-cascader-item za-picker-cascader-item-selected"
                                >
                                  选项一
                                </div>
                                <div
                                  className="za-picker-cascader-item"
                                >
                                  选项一
                                </div>
                              </div>
                            </div>
                          </Column>
                        </div>
                        <div
                          className="za-picker-column-group-item"
                        >
                          <Column
                            displayMember="label"
                            onValueChange={[Function]}
                            prefixCls="za-picker"
                            pure={true}
                            selectedValue="11"
                            valueMember="value"
                          >
                            <div
                              className="za-picker-cascader"
                            >
                              <div
                                className="za-picker-cascader-indicator"
                              />
                              <div
                                className="za-picker-cascader-content"
                              >
                                <div
                                  className="za-picker-cascader-item za-picker-cascader-item-selected"
                                >
                                  选项一
                                </div>
                                <div
                                  className="za-picker-cascader-item"
                                >
                                  选项二
                                </div>
                              </div>
                            </div>
                          </Column>
                        </div>
                      </div>
                    </ColumnGroup>
                  </Cascader>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</Picker>
`;

exports[`Picker DatePicker 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue=""
  disabled={false}
  displayMember="label"
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onMaskClick={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  value=""
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input za-picker-placeholder"
    >
      <input
        type="hidden"
        value=""
      />
      请选择
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <ColumnGroup
                    disabled={false}
                    displayMember="label"
                    onValueChange={[Function]}
                    prefixCls="za-picker"
                    selectedValue={
                      Array [
                        "2000",
                        "0",
                        "1",
                      ]
                    }
                    valueMember="value"
                  >
                    <div
                      className="za-picker-column-group"
                    >
                      <div
                        className="za-picker-column-group-item"
                      >
                        <Column
                          displayMember="label"
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          pure={true}
                          selectedValue="2000"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-cascader"
                          >
                            <div
                              className="za-picker-cascader-indicator"
                            />
                            <div
                              className="za-picker-cascader-content"
                            >
                              <div
                                className="za-picker-cascader-item za-picker-cascader-item-selected"
                              >
                                2000年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2001年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2002年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2003年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2004年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2005年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2006年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2007年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2008年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2009年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2010年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2011年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2012年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2013年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2014年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2015年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2016年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2017年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2018年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2019年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2020年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2021年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2022年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2023年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2024年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2025年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2026年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2027年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2028年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2029年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2030年
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                      >
                        <Column
                          displayMember="label"
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          pure={true}
                          selectedValue="0"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-cascader"
                          >
                            <div
                              className="za-picker-cascader-indicator"
                            />
                            <div
                              className="za-picker-cascader-content"
                            >
                              <div
                                className="za-picker-cascader-item za-picker-cascader-item-selected"
                              >
                                1月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                3月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                4月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                5月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                6月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                7月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                8月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                9月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                10月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                11月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                12月
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                      >
                        <Column
                          displayMember="label"
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          pure={true}
                          selectedValue="1"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-cascader"
                          >
                            <div
                              className="za-picker-cascader-indicator"
                            />
                            <div
                              className="za-picker-cascader-content"
                            >
                              <div
                                className="za-picker-cascader-item za-picker-cascader-item-selected"
                              >
                                1日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                2日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                3日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                4日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                5日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                6日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                7日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                8日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                9日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                10日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                11日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                12日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                13日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                14日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                15日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                16日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                17日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                18日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                19日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                20日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                21日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                22日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                23日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                24日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                25日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                26日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                27日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                28日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                29日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                30日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                              >
                                31日
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                    </div>
                  </ColumnGroup>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`Picker Picker 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择
  </div>
  <div
    class="za-picker-container"
  >
    <div
      class="za-popup za-popup-inner za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms;"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              请选择
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-cascader"
                  >
                    <div
                      class="za-picker-cascader-indicator"
                    />
                    <div
                      class="za-picker-cascader-content"
                    >
                      <div
                        class="za-picker-cascader-item za-picker-cascader-item-selected"
                      >
                        选项一
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        选项二
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Picker StackPicker 1`] = `
<PickerStack
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "海淀区",
            "value": "11",
          },
          Object {
            "label": "西城区",
            "value": "12",
          },
        ],
        "label": "北京市",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "黄埔区",
            "value": "21",
          },
          Object {
            "label": "虹口区",
            "value": "22",
          },
        ],
        "label": "上海市",
        "value": "2",
      },
    ]
  }
  disabled={false}
  displayItems={8}
  displayRender={[Function]}
  itemHeight={50}
  itemRender={[Function]}
  labelAddon=" > "
  onCancel={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  validate={[Function]}
  value={Array []}
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-input za-picker-placeholder"
      onClick={[Function]}
    >
      <input
        type="hidden"
        value={Array []}
      />
      请选择
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                />
              </div>
              <div
                className="za-picker-crumbs"
              >
                <p>
                  选择：
                </p>
              </div>
              <div
                className="za-picker-stack-group"
              >
                <div
                  className="za-picker-stack-column lower-hidden"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-column-wrapper"
                    onClick={[Function]}
                  >
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      北京市
                    </div>
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      上海市
                    </div>
                  </div>
                </div>
                <div
                  className="za-picker-stack-column lower-hidden"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-column-wrapper"
                    onClick={[Function]}
                  >
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      海淀区
                    </div>
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      西城区
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</PickerStack>
`;
